--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 * {
   font-family: "Inter";
-  color:#9B9BA4;
+  color: #9b9ba4;
 }
 
 @media screen and (min-width: 991px) {
@@ -22,18 +22,13 @@ body {
   background-color: #2c2d33;
 }
 
+/* HEADER */
 .header {
   margin-top: 65px;
   margin-bottom: 80;
 }
 .about {
-  
-  padding:50px;
-}
-
-
-.about, .projects {
-  
+  padding: 50px;
 }
 
 .header h1 {
@@ -48,7 +43,6 @@ body {
 }
 
 .header h2 {
- 
   font-weight: 900px;
   font-size: 35px;
   text-align: center;
@@ -61,7 +55,6 @@ body {
 .section-title {
   color: #76f610;
   font-size: 35px;
-  
 }
 
 .section-subtitle {
@@ -73,9 +66,9 @@ body {
 }
 
 .primaryButton {
-  color:#ffffff;
+  color: #ffffff;
   margin-top: 35px;
-  width: 1125px;
+  width: 180px;
   height: 40px;
   background: #0fe532;
   text-align: center;
@@ -83,20 +76,21 @@ body {
 }
 
 .secondaryButton {
-  color:#ffffff;
+  color: #ffffff;
   margin-top: 35px;
-  width: 999px;
+  width: 180px;
   height: 40px;
   background: #0fe532;
   text-align: center;
   border-width: 0px;
 }
 
+/* PROJECT */
+
 .projects {
   color: #c0c0ca;
   padding: 50px;
 }
-
 .project {
   border: 1px solid #8c8383;
   margin: 30px 0px;
@@ -114,7 +108,8 @@ body {
   background: linear-gradient(
     229.74deg,
     #5e5e5e 20.34%,
-    rgba(116, 112, 112, 0) 107.11%);
+    rgba(116, 112, 112, 0) 107.11%
+  );
   width: 75px;
   height: 60px;
   display: flex;
@@ -128,6 +123,24 @@ body {
   font-weight: 490;
 }
 
+.container > div {
+  margin-left: 180px;
+  margin-top: 122 px;
+  padding: 35px;
+}
+
+.Contact > div {
+  margin-top: -15px;
+}
+
+
+/* TECHSTACKS */
+
+.techstacks {
+  margin-bottom: 50px;
+  margin-top: 80px;
+}
+
 .techstack {
   position: relative;
   width: 500px;
@@ -135,7 +148,6 @@ body {
 }
 
 .techstack > div {
-  
   width: 100%;
 }
 
@@ -147,64 +159,45 @@ body {
   display: flex;
   justify-content: left;
   align-items: left;
-  
 }
 .techstack p {
-  
-  margin-top:-9px;
+  margin-top: -9px;
   padding: 0px 0px 0px 15px;
   font-weight: 490;
-  border-bottom: 1px solid #C0C0CA;
-
-}
-.techstacks {
-  margin-bottom: 50px;
-  margin-top: 80px;
-}
-.container > div {
-  margin-left: 180px;
-  margin-top: 122 px;
-  padding: 35px;
+  border-bottom: 1px solid #c0c0ca;
 }
 
-.Contact > div {
-  margin-top:-15px;
-}
-
-
-footer {
-display: flex;
-justify-content: space-between;
-align-items:baseline;
-}
-
-footer .header h1 {
-font-size: 35px;
-margin: 15px;
-}
-
-
+/* COMPONENTS SVG */
 .techstack .starSvg {
-  position:absolute;
+  position: absolute;
   left: -50px;
   bottom: 32px;
-  
 }
-
-
-.techstack .arrowSvg  {
+.techstack .arrowSvg {
   margin-top: 20px;
   margin-left: 15px;
-  position:absolute;
+  position: absolute;
   right: 5px;
-
 }
 
+/*  FORM CONTACT  */
 .greenButton {
-  background-color: #0fe532!important;
-
+  background-color: #0fe532 !important;
 }
 
 .contactBackground {
   background-color: #2c2d33;
+}
+
+
+/* FOOTER */
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+footer .header h1 {
+  font-size: 35px;
+  margin: 15px;
 }
